--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,12 +2,15 @@ lib_LTLIBRARIES = liblwlock.la
 include_HEADERS = lw_lock.h \
                   lw_types.h \
 				  lw_mutex.h \
+				  lw_mutex2b.h \
 				  lw_lock_stats.h \
 				  lw_sync_log.h \
-				  lw_thread.h 
+				  lw_thread.h
+
 liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
 		   		        lw_mutex.h \
+				        lw_mutex2b.h \
 				        lw_lock_stats.h \
 				        lw_sync_log.h \
 				        lw_thread.h \
@@ -22,6 +25,7 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_waiter_intern.h \
 						lw_lock.c \
 						lw_mutex.c \
+				        lw_mutex2b.c \
 						lw_lock_stats.c \
 						lw_sync_log.c \
 						lw_thread.c \
