- implemented lw_cond_var.c and .h. It is compiling now.  - added dummy test program examples/lw_condvar_example.c to    verify that everything compiles and links. Will have to    add meaningful code to this test program to actually test    that lw_cond_var is working   - minor fixes here and there

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,10 @@
-noinst_PROGRAMS = lw_mutex_example
+noinst_PROGRAMS = lw_mutex_example lw_condvar_example
 
 INCLUDES = -I../src/
 
 lw_mutex_example_LDADD   = ../src/liblwlock.la
 lw_mutex_example_SOURCES = lw_mutex_example.c
+
+lw_condvar_example_LDADD   = ../src/liblwlock.la
+lw_condvar_example_SOURCES = lw_condvar_example.c
 
