--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ include_HEADERS = lw_lock.h \
                   lw_types.h \
 				  lw_mutex.h \
 				  lw_mutex2b.h \
+				  lw_cond_var.h \
 				  lw_lock_stats.h \
 				  lw_sync_log.h \
 				  lw_thread.h
@@ -11,6 +12,7 @@ liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
 		   		        lw_mutex.h \
 				        lw_mutex2b.h \
+				        lw_cond_var.h \
 				        lw_lock_stats.h \
 				        lw_sync_log.h \
 				        lw_thread.h \
@@ -26,6 +28,7 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_lock.c \
 						lw_mutex.c \
 				        lw_mutex2b.c \
+						lw_cond_var.c \
 						lw_lock_stats.c \
 						lw_sync_log.c \
 						lw_thread.c \
