removed man page directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src tests examples man
+SUBDIRS = src tests examples
 EXTRA_DIST = lwlock.spec configure.ac lwlock.pc.in MPL-2.0
 pkgconfig_DATA = lwlock.pc
 
