Added a new "bitlock" abstraction.
2 bits out of a 32 bit or 64 bit values can be used as a lock. One for lock
and one to indicate waiters. The waiters are all kept on common lists. The hashing
of lock address to wait list is rather simple and we should put a simple crc lookup
table there instead.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,8 +5,10 @@ include_HEADERS = lw_lock.h \
 				  lw_mutex2b.h \
 				  lw_rwlock.h \
 				  lw_cond_var.h \
-				  atomic_list.h \
 				  lf_stack.h
+				  lw_bitlock.h \
+				  atomic_list.h \
+				  murmur.h
 
 liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
@@ -34,8 +36,9 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_event.c \
 						lw_waiter.c \
 						lw_rwlock.c \
-						atomic_list.c \
 						lf_stack.c
+						lw_bitlock.c \
+						atomic_list.c
 
 liblwlock_la_LDFLAGS = -version-info 0:0:0
 liblwlock_la_LIBADD  = $(PTHREAD_LIBS)
