--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,8 @@ include_HEADERS = lw_lock.h \
 				  lw_mutex2b.h \
 				  lw_rwlock.h \
 				  lw_cond_var.h \
-				  atomic_list.h
+				  atomic_list.h \
+				  lf_stack.h
 
 liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
@@ -33,7 +34,8 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_event.c \
 						lw_waiter.c \
 						lw_rwlock.c \
-						atomic_list.c
+						atomic_list.c \
+						lf_stack.c
 
 liblwlock_la_LDFLAGS = -version-info 0:0:0
 liblwlock_la_LIBADD  = $(PTHREAD_LIBS)
