Fixes resulting from testing bitlocks.
Fixes all over the place. Basic bitlock test passes including use of
cv bit. The more obscure API is better tested via monitors.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = lw_mutex_example lw_condvar_example
+noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example
 
 INCLUDES = -I../src/
 
@@ -7,4 +7,7 @@ lw_mutex_example_SOURCES = lw_mutex_example.c
 
 lw_condvar_example_LDADD   = ../src/liblwlock.la
 lw_condvar_example_SOURCES = lw_condvar_example.c
+
+lw_bitlock_example_LDADD   = ../src/liblwlock.la
+lw_bitlock_example_SOURCES = lw_bitlock_example.c
 
