--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ examples/Makefile
 examples/Makefile.in
 examples/lw_condvar_example
 examples/lw_mutex_example
+examples/lw_bitlock_example
 faq.html
 index.html
 install-sh
