Add monitor example.
Expose config options for num monitors and bit lock wait lists.
Makes it easier to do contention testing instead of having to temporarily
modifying code.

various fixes and cleanups found when debugging monitor code.

fixup messed up Makefile.am (messed in rebase) and smaller name to magic field in dlist.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example
+noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example
 
 INCLUDES = -I../src/
 
@@ -10,4 +10,7 @@ lw_condvar_example_SOURCES = lw_condvar_example.c
 
 lw_bitlock_example_LDADD   = ../src/liblwlock.la
 lw_bitlock_example_SOURCES = lw_bitlock_example.c
+
+lw_monitor_example_LDADD   = ../src/liblwlock.la
+lw_monitor_example_SOURCES = lw_monitor_example.c
 
