--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example
+noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example counter_example
 
 INCLUDES = -I../src/
 
@@ -13,4 +13,7 @@ lw_bitlock_example_SOURCES = lw_bitlock_example.c
 
 lw_monitor_example_LDADD   = ../src/liblwlock.la
 lw_monitor_example_SOURCES = lw_monitor_example.c
+
+counter_example_LDADD   = ../src/liblwlock.la
+counter_example_SOURCES = counter_example.c
 
