--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,9 @@ include_HEADERS = lw_lock.h \
 				  atomic_list.h \
 				  murmur.h \
 				  lf_stack.h \
-				  lw_monitor.h
+				  lw_monitor.h \
+				  delegate.h \
+				  counter.h
 
 liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
@@ -39,7 +41,9 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_bitlock.c \
 						atomic_list.c \
 						lf_stack.c \
-						lw_monitor.c
+						lw_monitor.c \
+						delegate.c \
+						counter.c
 
 liblwlock_la_LDFLAGS = -version-info 0:0:0
 liblwlock_la_LIBADD  = $(PTHREAD_LIBS)
