Add 32 bit pointer based singly linked list.
the list also has per node locks and iterators that utilize them. Until there are 3-bit
rwlocks, the iteration parallelism is really constrained. Also added a more general abstraction
for mapping full pointers to shorter values. Only 32 bit version written up so far but others
should be trivially possible to add.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,9 @@ include_HEADERS = lw_lock.h \
 				  lf_stack.h \
 				  lw_monitor.h \
 				  delegate.h \
-				  counter.h
+				  counter.h \
+				  ptr_map.h \
+				  slist32.h
 
 liblwlock_la_SOURCES =  lw_lock.h \
                         lw_types.h \
@@ -44,7 +46,9 @@ liblwlock_la_SOURCES =  lw_lock.h \
 						lw_monitor.c \
 						delegate.c \
 						counter.c \
-						lw_event.c
+						lw_event.c \
+						ptr_map.c \
+						slist32.c
 
 liblwlock_la_LDFLAGS = -version-info 0:0:0
 liblwlock_la_LIBADD  = $(PTHREAD_LIBS)
