--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example counter_example
+noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example counter_example lw_bitlock_rw_example
 
 INCLUDES = -I../src/
 
@@ -16,4 +16,7 @@ lw_monitor_example_SOURCES = lw_monitor_example.c
 
 counter_example_LDADD   = ../src/liblwlock.la
 counter_example_SOURCES = counter_example.c
+
+lw_bitlock_rw_example_LDADD   = ../src/liblwlock.la
+lw_bitlock_rw_example_SOURCES = lw_bitlock_rw_example.c
 
